tests/unit/commands/info/snapshots/sara__commands__info__render__tests__styled_snapshot_info_anchor_selected.snap
---
source: tests/unit/commands/info/render.rs
expression: out
---
 ○ pending  │  · never validated  │  ⎇ no branch  │  💬  1 open  ⟳ 1 needs revision                        #6 · 00000000
┌ Task tree  (d to expand) ──────────────┐┌ Task 6 ────────────────────────────────────────────────────────────────────┐
│ ← blocked by (1)                       ││Anchor                                                                      │
│  └─✓ 1 task 1                          ││  Assignment  make the TUI coherent                                         │
│────────────────────────────────────────││  Why         screens drifted apart                                         │
│ ▶   6 root task                        ││                                                                            │
│────────────────────────────────────────││   Description root task                                                    │
│ blocks → (1)                           ││   Project     tk                                                           │
│  └─○ 2 task 2                          ││   Priority    High                                                         │
└────────────────────────────────────────┘│   Due         YYYY-MM-DD hh:mm  (due in 3 days)                            │
┌ Git ───────────────────────────────────┐│   Tags        tui, theme                                                   │
│  No branch tied.                       ││   Estimate    -                                                            │
│                                        ││   Recur       -                                                            │
│  Run: sara <id> addbranch              ││   Depends on  -                                                            │
│                                        ││  Time spent  -                                                             │
│                                        ││  Urgency     7.5                                                           │
│                                        ││  Entered     YYYY-MM-DD hh:mm  (today)                                     │
│                                        ││  Modified    YYYY-MM-DD hh:mm                                              │
│                                        ││                                                                            │
│                                        ││  ↑/↓ select · Enter open/toggle · c comment · r reconsider · x resolve     │
│                                        ││                                                                            │
│                                        ││Risks                                                                       │
│                                        ││   • info render is huge (ai)                                               │
│                                        ││                                                                            │
│                                        ││  1 AI work note (1 findings)  — the AI's execution workpaper, not usually  │
│                                        ││needed for review  (n to view)                                              │
│                                        ││                                                                            │
│                                        ││▾ Possible relevant files (2)                                               │
│                                        ││ ▶ src/commands/info/handler.rs :: render (10-40) (ai)  — builds focusables │
│                                        ││💬 1 ⟳                                                                       │
│                                        ││      ╰ hh:mm ⟳  check this one                                             │
│                                        ││   src/infrastructure/tui/theme.rs :: render (10-40)                        │
│                                        ││                                                                            │
│                                        ││▾ Checklist (3)  1/2 steps · 0/1 acceptance                                 │
│                                        ││  acceptance  ░░░░░░░░░░░░░░░░░░░░ 0/1                                      │
│                                        ││   [x] recall                                                               │
│                                        ││ ◆ [ ] observe  ← next                                                      │
│                                        ││         why observe                                                        │
│                                        ││   [ ] snapshots pass [accept]                                              │
│                                        ││         verify cargo test  → not run                                       │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────┘
 ↑/↓ move • Enter edit/open/fold • c comment • a step • d tree • n notes • u urgency • v expand • ? help • q close
--- styles ---
abbbbbbbbbcccccccccccccccccccccccccccccccccccccccccccdedddddddffffffffffffffffffffaaaaaaaaaaaaaaaaaaaaaaaaggggggggggggga
hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
hjjjjjjjjjjjjjjjjjeeeeeeeeeeeeeeeeeeeeeeehikkkkkkeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hllllmmmmmmmmmmeeeeeeeeeeeeeeeeeeeeeeeeeehillllllllllllllnnnnnnnnnnnnnnnnnnnnneeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hllllllllllllllllllllllllllllllllllllllllhilllllllllllllloooooooooooooooooooooeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hppppppppppppppppeeeeeeeeeeeeeeeeeeeeeeeehieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hllllllllllllllllllllllllllllllllllllllllhillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hjjjjjjjjjjjjjeeeeeeeeeeeeeeeeeeeeeeeeeeehillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hlllliiiiiiiiiieeeeeeeeeeeeeeeeeeeeeeeeeehilllllllllllllllqqqqeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
llllllllllllllllllllllllllllllllllllllllllillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
lllllllllllllllllleeeeeeeeeeeeeeeeeeeeeeelillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
looooooooooooooooooooooooooeeeeeeeeeeeeeelillllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelilllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelilllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelilllllllllllllleeeeeeeeeeeeeeeellllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelilllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelirrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrreeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelikkkkkeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelioooooeeeeeeeeeeeeeeeeeeehhhhheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelirrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrreei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelirrrrrrrrrrrrrrrrrrrrrrrrrrrrrreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelikkkkkkkkkkkkkkkkkkkkkkkkkkkkkeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelisssppppppppppppppppppppppppppppppppppppppppppppppssssssssssssssssssssssssssei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelitetuueeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelillllllllllllllllllllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelioooiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiieeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelikkkkkkkkkkkkkkkooooooooooooooooooooooooooooeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelillllllllllllllllllllllllllllllllllooooeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeliooooooommmmmmeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeliiiiiiiikkkkkkkiiiiiiiieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelilllllllllllllllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelioooooooeeeeeeeeeeeeeevvvvvvvvveeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelillllllllllllllllvvvvvvvvvveellllllllleeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
leeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeelieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeei
lllllllllllllllllllllllllllllllllllllllllliiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
--- legend ---
a fg=Some(Reset) bg=Some(Rgb(28, 30, 44)) mod=NONE
b fg=Some(White) bg=Some(Rgb(28, 30, 44)) mod=BOLD
c fg=Some(DarkGray) bg=Some(Rgb(28, 30, 44)) mod=NONE
d fg=Some(Cyan) bg=Some(Rgb(28, 30, 44)) mod=NONE
e fg=Some(Reset) bg=Some(Reset) mod=NONE
f fg=Some(Yellow) bg=Some(Rgb(28, 30, 44)) mod=BOLD
g fg=Some(Gray) bg=Some(Rgb(28, 30, 44)) mod=NONE
h fg=Some(Magenta) bg=Some(Reset) mod=NONE
i fg=Some(Cyan) bg=Some(Reset) mod=NONE
j fg=Some(Gray) bg=Some(Reset) mod=BOLD
k fg=Some(Cyan) bg=Some(Reset) mod=BOLD
l fg=Some(DarkGray) bg=Some(Reset) mod=NONE
m fg=Some(DarkGray) bg=Some(Reset) mod=CROSSED_OUT
n fg=Some(White) bg=Some(Reset) mod=NONE
o fg=Some(Gray) bg=Some(Reset) mod=NONE
p fg=Some(White) bg=Some(Blue) mod=BOLD
q fg=Some(Red) bg=Some(Reset) mod=NONE
r fg=Some(DarkGray) bg=Some(Reset) mod=ITALIC
s fg=Some(White) bg=Some(Blue) mod=NONE
t fg=Some(Cyan) bg=Some(Blue) mod=NONE
u fg=Some(Yellow) bg=Some(Blue) mod=NONE
v fg=Some(Blue) bg=Some(Reset) mod=NONE
